Fix button color and display on iphone

--- a/src/components/QuantityInput/QuantityInput.css
+++ b/src/components/QuantityInput/QuantityInput.css
@@ -39,7 +39,6 @@
     display: flex;
     justify-content: center;
     margin: 1rem;
-    height: 1rem;
     align-items: center
 }
 
