--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -10,6 +10,7 @@
     min-width: 5rem;
     width: fit-content;
     align-self: center;
+    color: #0c3d63;
 }
 
 .command-button-container {
